--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <button class="btn btn-primary" onclick="openModal()">+ Aggiungi Torneo</button>
             <button class="btn btn-success" onclick="saveData()">💾 Salva</button>
             <button class="btn btn-danger" onclick="resetData()">🔄 Reset</button>
+            <button onclick="exportCSV()" style="background:#8e44ad;color:white;border:none;padding:8px 12px;border-radius:6px;font-weight:600;">📊 CSV Excel</button>
         </div>
         <div id="status" class="status"></div>
     </div>
