--- a/index.html
+++ b/index.html
@@ -122,10 +122,9 @@
   }, 0);
   return total.toFixed(1);
 }
-        
-       function exportCSV(){let csv='TORNEO,'+players.map(p=>p.name).join(',')+'
-';tournaments.forEach(t=>{csv+=t.name+','+players.map((p,j)=>t.scores[j]||'').join(',')+'
-'});csv+='TOTALE,'+players.map((p,j)=>getTotal(j)).join(',');const a=document.createElement('a');a.href='data:text/csv;charset=utf-8,'+encodeURIComponent(csv);a.download='FantaTennis.csv';a.click();showStatus('CSV OK!');}
+        function exportCSV(){
+  const totals = players.map((p,j) => getTotal(j));
+  let
         function updateScore(tIdx,pIdx,value){tournaments[tIdx].scores[pIdx]=value;renderTable();}
         function openModal(){document.getElementById('modal').style.display='block';document.getElementById('tournamentname').focus();}
         function closeModal(){document.getElementById('modal').style.display='none';}
