--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body{font-family:'Segoe UI',sans-serif;background:linear-gradient(135deg,#1a472a 0%,#0f2818 50%,#1a472a 100%);min-height:100vh;padding:20px;color:#333;}
 .container{max-width:1400px;margin:0 auto;}
 .header{text-align:center;margin-bottom:30px;}
-.title{font-size:2.5em;font-weight:900;background:linear-gradient(135deg,#FFD700 0%,#FFA500 50%,#FF8C00 100%);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-shadow:2px 2px 4px rgba(0,0,0,0.3);letter-spacing:1px;text-transform:uppercase;}
+.title{font-size:2.5em;font-weight:900;background:linear-gradient(135deg,#FFD700 0%,#FFA500 50%,#FF8C00 100%);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;text-shadow:2px 2px 4px rgba(0,0,0,0.3);letter-spacing:1px;text-transform:uppercase;}
 .subtitle{font-size:1em;color:#fff;opacity:0.9;font-weight:300;}
 .table-wrapper{background:rgba(255,255,255,0.95);border-radius:15px;padding:20px;box-shadow:0 15px 40px rgba(0,0,0,0.3);overflow:auto;}
 table{width:100%;border-collapse:collapse;font-size:0.9em;}
@@ -19,7 +19,7 @@ th{background:linear-gradient(135deg,#1a472a 0%,#2d6b4a 100%);color:white;font-w
 .player-name{font-size:0.75em;color:white;font-weight:600;}
 input{width:100%;padding:6px;border:1px solid #ddd;border-radius:5px;font-size:1em;font-weight:500;text-align:center;color:#1a472a;transition:all 0.2s;}
 input:focus{outline:none;border-color:#FFD700;background:#fffef0;box-shadow:0 0 0 2px rgba(255,215,0,0.2);}
-.total-row{background:linear-gradient(135deg,#1a472a 0%,#2d6b4a 100%)!important;color:white!important;font-weight:bold;font-size:1.1em!important;border-bottom:none!important;border-radius:0 0 0 8px;}
+.total-row {background: linear-gradient(135deg, #1a472a 0%, #2d6b4a 100%)!important;color:white!important;font-weight:bold;font-size:1.1em!important;border-bottom:none!important;border-radius:0 0 0 8px;}
 .total-row td{border-radius:0 0 8px 0;}
 .controls{margin-top:25px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap;}
 .btn{padding:12px 25px;border:none;border-radius:8px;font-size:0.95em;font-weight:600;cursor:pointer;transition:all 0.3s;text-transform:uppercase;}
@@ -75,70 +75,79 @@ input:focus{outline:none;border-color:#FFD700;background:#fffef0;box-shadow:0 0 
 <script src="https://www.gstatic.com/firebasejs/12.8.0/firebase-firestore-compat.js"></script>
 
 <script>
-    // CONFIG FIREBASE
-    const firebaseConfig = {
-        apiKey: "AIzaSyBqkJaCnZ6Hzm7ytyoj3_dKeZ0kuNbJXbI",
-        authDomain: "fantatennis-ecd35.firebaseapp.com",
-        projectId: "fantatennis-ecd35",
-        storageBucket: "fantatennis-ecd35.firebasestorage.app",
-        messagingSenderId: "6582569035",
-        appId: "1:6582569035:web:d7f57d5473d635197f25ce"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    window.db = db; // serve perché il resto del codice usa db globalmente
+  // FIREBASE CONFIG
+  const firebaseConfig = {
+    apiKey: "AIzaSyBqkJaCnZ6Hzm7ytyoj3_dKeZ0kuNbJXbI",
+    authDomain: "fantatennis-ecd35.firebaseapp.com",
+    projectId: "fantatennis-ecd35",
+    storageBucket: "fantatennis-ecd35.firebasestorage.app",
+    messagingSenderId: "6582569035",
+    appId: "1:6582569035:web:d7f57d5473d635197f25ce"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+  window.db = db; // serve perché il resto del codice usa db globalmente
 </script>
 
 <script>
 const players=[
-    {name:'Gennaro',photo:'Gennaro.jpg'},
-    {name:'Mirko',photo:'Mirko.jpg'},
-    {name:'Federico',photo:'Federico.jpg'},
-    {name:'Ciro',photo:'Ciro.jpg'},
-    {name:'Damiano',photo:'Damiano.jpg'},
-    {name:'Carlo',photo:'Carlo.jpg'},
-    {name:'Francesco',photo:'Francesco.jpg'},
-    {name:'Friarello',photo:'Friarello.jpg'},
-    {name:'Giuseppe',photo:'Giuseppe.jpg'},
-    {name:'Donatello',photo:'Donatello.jpg'}
+  {name:'Gennaro',photo:'Gennaro.jpg'},
+  {name:'Mirko',photo:'Mirko.jpg'},
+  {name:'Federico',photo:'Federico.jpg'},
+  {name:'Ciro',photo:'Ciro.jpg'},
+  {name:'Damiano',photo:'Damiano.jpg'},
+  {name:'Carlo',photo:'Carlo.jpg'},
+  {name:'Francesco',photo:'Francesco.jpg'},
+  {name:'Friarello',photo:'Friarello.jpg'},
+  {name:'Giuseppe',photo:'Giuseppe.jpg'},
+  {name:'Donatello',photo:'Donatello.jpg'}
 ];
 let tournaments=[];
 
+// ------------------------- FUNZIONI -------------------------
 function init(){ loadData(); }
 
 function renderTable(){ renderHead(); renderBody(); }
 
 function renderHead(){
-    const head=document.getElementById('tablehead');
-    head.innerHTML='<tr><th>TORNEO</th>'+players.map(p=>`<th>
-        <div class="player-avatar">
-            <img src="${p.photo}" onerror="this.style.display=\'none\';this.parentNode.innerHTML=\'${p.name.charAt(0)}\';">
-        </div>
-        <div class="player-name">${p.name}</div>
-    </th>`).join('')+'</tr>';
+  const head=document.getElementById('tablehead');
+  head.innerHTML='<tr><th>TORNEO</th>'+players.map(p=>`<th>
+    <div class="player-avatar">
+      <img src="${p.photo}" style="width:100%;height:100%;object-fit:cover;border-radius:50%;border:2px solid white;" 
+      onerror="this.style.display=\'none\'; this.parentNode.textContent=\'${p.name.charAt(0)}\';">
+    </div>
+    <div class="player-name">${p.name}</div>
+  </th>`).join('')+'</tr>';
 }
 
 function renderBody(){
-    const body=document.getElementById('tablebody');
-    body.innerHTML='';
-    tournaments.forEach((t,i)=>{
-        const row=document.createElement('tr');
-        row.innerHTML='<td>'+t.name+'<button onclick="deleteTournament('+i+')" style="margin-left:10px;background:#e74c3c;color:white;border:none;padding:2px 8px;border-radius:4px;font-size:0.7em;">X</button></td>'
-        + players.map((p,j)=>`<td><input type="number" step="0.1" value="${t.scores[j]||''}" onchange="updateScore(${i},${j},this.value)" placeholder="—"></td>`).join('');
-        body.appendChild(row);
-    });
+  const body=document.getElementById('tablebody');
+  body.innerHTML='';
 
-    const totalRow=document.createElement('tr');
-    totalRow.className='total-row';
-    totalRow.innerHTML='<th>TOTALE</th>'+players.map((p,j)=>`<td>${getTotal(j)}</td>`).join('');
-    body.appendChild(totalRow);
+  if(tournaments.length===0){
+    const row=document.createElement('tr');
+    row.innerHTML='<td colspan="'+(players.length+1)+'" style="text-align:center;color:#555;padding:15px;">Nessun torneo ancora</td>';
+    body.appendChild(row);
+  } else {
+    tournaments.forEach((t,i)=>{
+      const row=document.createElement('tr');
+      row.innerHTML='<td>'+t.name+'<button onclick="deleteTournament('+i+')" style="margin-left:10px;background:#e74c3c;color:white;border:none;padding:2px 8px;border-radius:4px;font-size:0.7em;">X</button></td>'
+        + players.map((p,j)=>`<td><input type="number" step="0.1" value="${t.scores[j]||''}" onchange="updateScore(${i},${j},this.value)" placeholder="—"></td>`).join('');
+      body.appendChild(row);
+    });
+  }
+
+  const totalRow=document.createElement('tr');
+  totalRow.className='total-row';
+  totalRow.innerHTML='<th>TOTALE</th>'+players.map((p,j)=>`<td>${getTotal(j)}</td>`).join('');
+  body.appendChild(totalRow);
 }
 
 function getTotal(idx){
-    return tournaments.reduce((sum,t)=>{
-        const s=parseFloat(t.scores[idx]);
-        return sum + (isNaN(s)?0:s);
-    },0).toFixed(1);
+  return tournaments.reduce((sum,t)=>{
+    const s=parseFloat(t.scores[idx]);
+    return sum + (isNaN(s)?0:s);
+  },0).toFixed(1);
 }
 
 function updateScore(tIdx,pIdx,value){ tournaments[tIdx].scores[pIdx]=value; renderTable(); }
@@ -147,76 +156,70 @@ function openModal(){ document.getElementById('modal').style.display='block'; do
 function closeModal(){ document.getElementById('modal').style.display='none'; }
 
 function addTournament(){
-    const name = document.getElementById('tournamentname').value.trim();
-    if(!name) return;
-
-    // inizializzo scores per tutti i giocatori
-    const scores = {};
-    for(let i=0;i<players.length;i++){ scores[i]=''; }
-
-    tournaments.push({name, scores});
-    saveData();
-    renderTable();
-    closeModal();
-    document.getElementById('tournamentname').value='';
+  const name=document.getElementById('tournamentname').value.trim();
+  if(!name) return;
+  tournaments.push({name:name,scores:{}});
+  saveData();
+  renderTable();
+  closeModal();
+  document.getElementById('tournamentname').value='';
 }
 
 function deleteTournament(idx){
-    if(confirm('Eliminare?')){
-        tournaments.splice(idx,1);
-        saveData();
-        renderTable();
-    }
+  if(confirm('Eliminare?')){
+    tournaments.splice(idx,1);
+    saveData();
+    renderTable();
+  }
 }
 
 function saveData(){
-    db.collection("fantatennis").doc("shared").set({tournaments})
-    .then(()=>showStatus("💾 Salvato (cloud)!"))
-    .catch(err=>showStatus("❌ Errore salvataggio: "+err));
+  db.collection("fantatennis").doc("shared").set({tournaments})
+  .then(()=>showStatus("💾 Salvato (cloud)!"))
+  .catch(err=>showStatus("❌ Errore salvataggio: "+err));
 }
 
 function resetData(){
-    if(confirm('Reset tutto?')){
-        tournaments=[];
-        const emptyScores = {};
-        for(let i=0;i<players.length;i++) emptyScores[i]='';
-        db.collection("fantatennis").doc("shared").set({tournaments});
-        renderTable();
-        showStatus('Resettato!');
-    }
+  if(confirm('Reset tutto?')){
+    tournaments=[];
+    db.collection("fantatennis").doc("shared").set({tournaments});
+    renderTable();
+    showStatus('Resettato!');
+  }
 }
 
 function loadData(){
-    db.collection("fantatennis").doc("shared").onSnapshot(snap=>{
-        if(snap.exists){
-            tournaments = snap.data().tournaments || [];
-            renderTable();
-        }
-    });
+  db.collection("fantatennis").doc("shared").onSnapshot(snap=>{
+    if(snap.exists){
+      tournaments = snap.data().tournaments || [];
+      renderTable();
+    }
+  });
 }
 
 function exportCSV(){
-    let csv = 'TORNEO,' + players.map(p=>p.name).join(",")+'\n';
-    tournaments.forEach(t=>{
-        csv += t.name + ',' + players.map((p,j)=>t.scores[j]||'').join(',')+'\n';
-    });
-    csv += 'TOTALE,' + players.map((p,j)=>getTotal(j)).join(',');
-    const a=document.createElement('a');
-    a.href="data:text/csv;charset=utf-8,"+encodeURIComponent(csv);
-    a.download="FantaTennis.csv";
-    document.body.appendChild(a);
-    a.click();
-    document.body.removeChild(a);
-    showStatus('CSV OK!');
+  let csv = 'TORNEO,' + players.map(p=>p.name).join(",")+'\n';
+  tournaments.forEach(t=>{
+    csv += t.name + ',' + players.map((p,j)=>t.scores[j]||'').join(',')+'\n';
+  });
+  csv += 'TOTALE,' + players.map((p,j)=>getTotal(j)).join(',');
+  const a=document.createElement('a');
+  a.href="data:text/csv;charset=utf-8,"+encodeURIComponent(csv);
+  a.download="FantaTennis.csv";
+  document.body.appendChild(a);
+  a.click();
+  document.body.removeChild(a);
+  showStatus('CSV OK!');
 }
 
 function showStatus(msg){
-    const s=document.getElementById('status');
-    s.textContent=msg;
-    s.style.display='block';
-    setTimeout(()=>s.style.display='none',2000);
+  const s=document.getElementById('status');
+  s.textContent=msg;
+  s.style.display='block';
+  setTimeout(()=>s.style.display='none',2000);
 }
 
+// ------------------------- EVENT LISTENERS -------------------------
 document.addEventListener('DOMContentLoaded', init);
 window.onclick=e=>{ if(e.target.id==='modal') closeModal(); };
 document.getElementById('tournamentname').addEventListener('keypress',e=>{ if(e.key==='Enter') addTournament(); });
