--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@ input:focus{outline:none;border-color:#FFD700;background:#fffef0;box-shadow:0 0 
 .modal-buttons{display:flex;gap:10px;justify-content:flex-end;}
 .status{display:none;background:#27ae60;color:white;padding:10px;border-radius:8px;margin-top:15px;text-align:center;}
 @media(max-width:768px){.title{font-size:1.8em;}.table-wrapper{padding:15px;font-size:0.8em;}th,td{padding:6px 8px;height:45px;}}
+    /* ===== FIX TESTO TABELLA PREMI ===== */
+.prize-table {
+    color: #ffffff !important;
+}
+
+.prize-table td,
+.prize-table tbody td,
+.prize-table tbody tr td {
+    color: #ffffff !important;
+    opacity: 1 !important;
+    }
 </style>
 </head>
 <body>
